--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-
+<h1>New title</h1>
     <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
         Name: <input type="text" name="fname">
         <input type="submit" value="Submit">
